<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		tools:context=".activities.DetailsActivity"
		android:paddingStart="10dp"
		android:paddingTop="10dp"
		android:paddingLeft="10dp"
		android:paddingEnd="10dp"
		android:paddingRight="10dp"
		android:paddingBottom="10dp"
		android:padding="10dp">
	
	<TextView
			android:text="@string/strLabelNoteName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/txtvNoteName"
			android:textSize="18sp"
			android:layout_marginTop="15dp" />
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:id="@+id/txtNoteName"
			android:hint="@string/strHintNoteName"
			android:textSize="18sp"
			android:minHeight="48dp"
			android:layout_marginTop="5dp" />
	
	<TextView
			android:text="@string/strLabelNoteDate"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/txtvNoteDate"
			android:textSize="18sp"
			android:layout_marginTop="15dp" />
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="date"
			android:id="@+id/txtNoteDate"
			android:hint="@string/strHintNoteDate"
			android:textSize="18sp"
			android:minHeight="48dp"
			android:layout_marginTop="5dp" />
	
	<TextView
			android:text="@string/strLabelNoteContent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/txtvNoteContent"
			android:textSize="18sp"
			android:layout_marginTop="15dp" />
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:inputType="textMultiLine"
			android:id="@+id/txtNoteContent"
			android:hint="@string/strHintNoteContent"
			android:textSize="18sp"
			android:minHeight="48dp"
			android:layout_marginTop="5dp" />

</LinearLayout>